--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production webpack",
-    "dev": "NODE_ENV=development nodemon ./src/server/server.js --ignore ./src/client --ignore ./dist",
+    "dev": "NODE_ENV=development nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
+    "dev-windows": "set NODE_ENV=development& nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/ktyjames/wedding-website#readme",
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
+    "babel-register": "^6.9.0",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.6",
     "express": "^4.13.4",
@@ -29,21 +32,17 @@
     "radium": "^0.17.1",
     "react": "^15.0.1",
     "react-addons-update": "^15.0.1",
-    "react-bootstrap-native-slider": "^1.1.6",
-    "react-color": "^2.0.0",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.2",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1",
-    "webpack": "^1.12.14"
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
