--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "NODE_ENV=production webpack",
+    "build-windows": "set NODE_ENV=production& webpack",
     "dev": "NODE_ENV=development nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "dev-windows": "set NODE_ENV=development& nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -37,7 +38,8 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
