--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wedding-website",
   "version": "1.0.0",
-  "description": "Great Scott!",
+  "description": "",
   "main": "webpack.config.js",
   "private": true,
   "scripts": {
@@ -12,20 +12,20 @@
     "dev-windows": "set NODE_ENV=development& nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "babel": {
+    "presets": ["es2015", "react", "stage-0"]
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ktyjames/wedding-website.git"
+    "url": ""
   },
-  "author": "The Scotts",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ktyjames/wedding-website/issues"
-  },
-  "homepage": "https://github.com/ktyjames/wedding-website#readme",
+  "homepage": "",
   "dependencies": {
-    "babel-polyfill": "^6.7.4",
+    "babel-polyfill": "^6.9.1",
     "babel-register": "^6.9.0",
-    "body-parser": "^1.15.0",
+    "body-parser": "^1.15.1",
     "bootstrap": "^3.3.6",
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
@@ -38,17 +38,16 @@
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1",
-    "serve-favicon": "^2.3.0"
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.6.1",
+    "babel-runtime": "^6.9.1",
     "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
@@ -61,6 +60,7 @@
     "react-loader": "^2.2.0",
     "rimraf": "^2.5.2",
     "source-map-support": "^0.4.0",
+    "static-loader": "^0.1.8",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
