--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.3",
+    "morgan": "^1.7.0",
     "radium": "^0.17.1",
     "react": "^15.1.0",
     "react-addons-update": "^15.0.1",
