--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
-    "presets": ["es2015", "react", "stage-0"]
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   },
   "repository": {
     "type": "git",
@@ -33,8 +37,10 @@
     "morgan": "^1.7.0",
     "radium": "^0.17.1",
     "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.1.0",
     "react-addons-update": "^15.0.1",
     "react-dom": "^15.1.0",
+    "react-motion": "^0.4.4",
     "react-redux": "^4.4.2",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.2",
