--- a/package.json
+++ b/package.json
@@ -27,43 +27,36 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
-    "babel-polyfill": "^6.9.1",
-    "babel-register": "^6.9.0",
-    "body-parser": "^1.15.1",
-    "bootstrap": "^3.3.6",
-    "express": "^4.13.4",
+    "babel-register": "^6.14.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^2.2.3",
+    "lodash": "^4.15.0",
     "morgan": "^1.7.0",
-    "radium": "^0.17.1",
-    "react": "^15.1.0",
-    "react-addons-css-transition-group": "^15.1.0",
-    "react-addons-update": "^15.0.1",
-    "react-dom": "^15.1.0",
-    "react-motion": "^0.4.4",
-    "react-redux": "^4.4.2",
-    "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.2",
-    "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1"
+    "radium": "^0.17.2",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.7.0",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.1",
-    "bootstrap-webpack": "0.0.5",
     "css-loader": "^0.23.1",
     "exports-loader": "^0.6.3",
+    "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "react-loader": "^2.2.0",
     "rimraf": "^2.5.2",
     "source-map-support": "^0.4.0",
