--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.1",
     "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
     "eventsource-polyfill": "^0.9.6",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "image-webpack-loader": "^2.0.0",
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "react-loader": "^2.2.0",
