--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "radium": "^0.17.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
