--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
     "morgan": "^1.7.0",
+    "nodemailer": "^2.6.0",
     "radium": "^0.17.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
