--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build-windows": "set NODE_ENV=production& webpack",
     "dev": "NODE_ENV=development nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "dev-windows": "set NODE_ENV=development& nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "NODE_ENV=production webpack",
+    "start": "node ./dist/server.js"
   },
   "babel": {
     "presets": [
