--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "NODE_ENV=development nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "dev-windows": "set NODE_ENV=development& nodemon ./src/server/index.js --ignore ./src/client --ignore ./dist",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "NODE_ENV=production webpack",
+    "postinstall": "webpack",
     "start": "node ./dist/server.js"
   },
   "babel": {
